syntax = "proto3";

option go_package = "github.com/cherry-game/cherry/examples/test_protobuf;test_protobuf";

package test_protobuf;

message GoBool {
  bool Value = 1;
}

message GoInt32 {
  int32  Value = 1;
}

message GoString {
  string Value = 1;
}